feat: remove the src and add mongodb. Also add getting the book id